--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -50,3 +50,12 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+       # New: Upload diffs if screenshots mismatch
+      - name: Upload screenshot diffs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshot-diffs
+          path: |
+            **/*.diff.png
+            **/*.actual.png
